--- a/css/reset & shard/shared.css
+++ b/css/reset & shard/shared.css
@@ -35,3 +35,8 @@
     font-family: tanha;
     src: url(../../font/Tanha-FD.ttf);
 }
+
+.Active {
+    display: block !important;
+    display: grid !important;
+}
