--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -14,6 +14,7 @@
     font-weight: bold;
     text-align: center;
     margin: 2rem 0;
+    line-height: 2.5rem;
 }
 
 #Home .baner-main {
@@ -87,6 +88,9 @@
     padding: 3rem 0;
     margin: 2rem 0;
     text-align: center;
+}
+#Home .card .btn{
+    width: 40%;
 }
 
 #Home .testimonial {
