--- a/css/pages/Services.css
+++ b/css/pages/Services.css
@@ -1,64 +1,1 @@
-#Services {
-    width: 100%;
-    display: none;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    justify-items: center;
-    align-items: center;
-}
-
-#Services .text-par {
-    margin: 2rem 0;
-    width: 70vw;
-    text-align: center;
-}
-
-#Services .title {
-    width: 70vw;
-    font-size: 1.5rem;
-    font-family: sahel;
-    font-weight: bold;
-    text-align: center;
-    margin: 2rem 0;
-}
-
-#Services .par {
-    width: 60vw;
-    margin: 1rem auto;
-    color: var(--text-color);
-    line-height: 1.6rem;
-    font-family: samim;
-}
-
-#Services .gallery {
-    width: 70vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#Services .gallery img {
-    width: 100%;
-    margin: 1rem 0;
-}
-
-#Services .btn {
-    text-align: center;
-    margin: 1.4rem auto;
-    background-color: var(--bg-title-color);
-    transition: var(--transition);
-    padding: .7rem 1.5rem;
-    cursor: pointer;
-}
-
-#Services .btn a {
-    text-decoration: none;
-    color: var(--color-btn);
-    font-size: 1.2rem;
-    font-family: vazir;
-}
-
-#Services .btn:hover {
-    background-color: var(--hover-color);
-}
+#Services {}
