--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0px;
+    background-color: var(--color-btn);
 }
 
 #navigation {
@@ -23,7 +24,6 @@ body {
     padding: 1rem;
     height: 80px;
     z-index: 10;
-    background-color: var(--color-btn);
 }
 
 #navigation .logo {
@@ -82,15 +82,16 @@ body {
 
 #footer .Guide {
     display: block;
-    margin: 2rem 0;
+    margin-bottom: 2rem;
     color: var(--color-link);
     font-size: 1.3rem;
     font-family: samim;
+    text-align: center;
 }
 
 #footer .link-item {
     list-style: none;
-    width: 100%;
+    /* width: 100%; */
     padding: 1rem;
 }
 
@@ -107,5 +108,126 @@ body {
 
 }
 
+#footer label {
+    display: flex;
+    flex-direction: column;
+}
+
+#footer .btn {
+    width: 50%;
+}
+
+#footer .icons1 {
+    display: none;
+}
+
+#footer .icons2 {
+    display: block;
+}
+
+
 
 /* Desktop */
+@media screen and (min-width:1007px) {
+
+    /* header */
+
+    #header {
+        padding: 1rem;
+    }
+
+    #navigation {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+    }
+
+    #navigation .logo {
+        justify-content: center;
+        flex: 2;
+    }
+
+    #navigation .logo img {
+        margin-left: 2rem;
+        width: 240px;
+        height: 70px;
+
+    }
+
+    .label svg {
+        display: none;
+    }
+
+    #navigation .link-item {
+        transform: translateY(0px) !important;
+        transition: var(--transition);
+        visibility: visible !important;
+        height: "auto" !important;
+        box-shadow: none !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 3;
+    }
+
+    #navigation .link-item .link-items {
+        margin: 0 .4rem;
+        padding: .3rem;
+    }
+
+    #navigation .link-item .link-items .link {
+        text-decoration: none;
+    }
+
+    #navigation .link-item .link-items .link:hover {
+        text-decoration: block;
+        text-decoration: underline;
+        text-underline-offset: 10px;
+    }
+
+    .link:focus,
+    .link:hover {
+        text-decoration: block;
+        text-decoration: underline;
+        text-underline-offset: 10px;
+    }
+
+
+    /* footer */
+    #footer {
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 2rem 0 3rem 0;
+    }
+
+    #footer .link-item {}
+
+
+    /* .container {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    } */
+
+
+    .space {
+        padding: 1rem 0;
+    }
+
+    .container-input input {
+        width: 450px;
+    }
+
+    #footer .icons1 {
+        display: block;
+    }
+
+    #footer .icons2 {
+        display: none;
+    }
+
+}
