responsive Home page

--- a/css/reset & shard/normalize.css
+++ b/css/reset & shard/normalize.css
@@ -37,9 +37,7 @@ body {
    * Render the `main` element consistently in IE.
    */
 
-main {
-    display: block;
-}
+main {}
 
 /**
    * Correct the font size and margin on `h1` elements within `section` and
