--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,5 +1,3 @@
-#Home {}
-
 #Home .baner-main {
     width: 70vw;
 }
@@ -10,7 +8,6 @@
 
 #Home .baner {
     width: 70vw;
-
 }
 
 #Home .baner img {
@@ -42,11 +39,115 @@
 }
 
 #Home .testimonial-name {
-    margin: 1.5rem;
+    display: block;
+    margin: 2rem;
     font-size: .9rem;
     line-height: 1.5rem;
 }
 
 #Home .testimonial-text {
     line-height: 1.5rem;
+}
+
+@media screen and (min-width: 1007px) {
+    #Home {
+        width: 80%;
+        grid-template-columns: repeat(3, 33.3333%);
+        grid-template-rows: auto;
+        justify-items: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    #Home .baner-main {
+        width: 100%;
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+
+    #Home .titleHome {
+        width: 100%;
+        font-size: 4rem;
+        line-height: 5rem;
+        font-family: samim;
+        grid-column: 2/3;
+        grid-row: 1/3;
+    }
+
+    #Home .baner {
+        width: 100%;
+        grid-column: 3/4;
+        grid-row: 1/3;
+    }
+
+    #Home .btnContact {
+        grid-column: 2/3;
+        grid-row: 1/3;
+        margin-top: 30rem;
+    }
+
+    #Home .textDesign {
+        grid-column: 1/4;
+        grid-row: 3/4;
+        margin: 0;
+        margin-top: 4rem;
+    }
+
+    #Home .btnServices {
+        grid-column: 1/4;
+        grid-row: 4/5;
+    }
+
+    #Home .gallery {
+        grid-column: 1/4;
+        grid-row: 5/6;
+        width: auto;
+        flex-direction: row;
+    }
+
+    #Home .image-con {
+        width: 70%;
+        margin: .5rem;
+    }
+
+    #Home .image-double {
+        width: 100%;
+        margin: .5rem;
+    }
+
+    #Home .textPortfolio {
+        grid-column: 1/4;
+        grid-row: 6/7;
+        margin: 0;
+        margin-top: 3rem;
+    }
+
+    #Home .btnPortfolio {
+        grid-column: 1/4;
+        grid-row: 7/8;
+    }
+
+    #Home .card {
+        grid-column: 1/4;
+        grid-row: 8/9;
+
+    }
+
+    #Home .testimonial {
+        width: 100%;
+        grid-column: 1/4;
+        grid-row: 9/10;
+
+    }
+
+    #Home .testimonial .container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    #Home .testimonial .container>div {
+        padding: 1.5rem;
+    }
 }
